fix: alignment for footer of topic-item

--- a/less/ariastel-styles.less
+++ b/less/ariastel-styles.less
@@ -137,7 +137,7 @@ main {
   }
 
   .aa_topic__counter {
-    margin-right: 8px;
+    margin-right: 4px;
   }
 }
 
