--- a/less/ariastel/index.less
+++ b/less/ariastel/index.less
@@ -53,6 +53,14 @@
 
 .topic-item__footer {
   margin-top: 8px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+
+  &>* {
+    margin-right: 2px;
+    margin-left: 2px;
+  }
 }
 
 .pagination-block {
